<resources>
    <string name="app_name">INF 311 - Erick</string>
    <string name="subject_name">INF 311 - Programação para Dispositivos Móveis</string>
    <string name="student_name">Erick Soares de Souza - 108191</string>
    <string name="value1_text">Valor 1:</string>
    <string name="value2_text">Valor 2:</string>
    <string name="hint_value_text">Digite um número...</string>
    <string name="add_text">+</string>
    <string name="min_text">-</string>
    <string name="mul_text">*</string>
    <string name="div_text">/</string>
    <string name="result_text">O resultado é: %s</string>
    <string name="result_invalid">Não é possível dividir por zero.</string>
    <string name="zero_text">0</string>
    <string name="one_text">1</string>
    <string name="two_text">2</string>
    <string name="three_text">3</string>
    <string name="four_text">4</string>
    <string name="five_text">5</string>
    <string name="six_text">6</string>
    <string name="seven_text">7</string>
    <string name="eight_text">8</string>
    <string name="nine_text">9</string>
    <string name="dot_text">.</string>
    <string name="erase_text">C</string>
    <string name="back_space_text">«</string>
    <string name="equal_text">=</string>
    <string name="text_name">Nome:</string>
    <string name="text_name_hint">Fulano de Tal</string>
    <string name="text_age">Idade:</string>
    <string name="text_age_hint">20</string>
    <string name="text_weight">Peso (Kg):</string>
    <string name="text_weight_hint">76.54</string>
    <string name="text_height">Altura (m):</string>
    <string name="text_height_hint">1.8</string>
    <string name="text_report">Relatório Nutricional</string>
    <string name="text_imc">IMC (Kg/m²):</string>
    <string name="text_classification">Classificação:</string>
    <string name="text_new_calculation">Realizar novo Cálculo</string>
    <string name="text_ipatinga">Ipatinga</string>
    <string name="text_vicosa">Viçosa</string>
    <string name="text_dpi">DPI</string>
    <string name="text_locale">Localização</string>
    <string name="text_logs">Meus logs</string>
    <string name="text_empty_logs">Nenhum log registrado ainda</string>
    <string name="text_lantern">Lanterna:</string>
    <string name="text_vibration">Vibração:</string>
    <string name="text_classificate_reads">Classificar leituras</string>
    <string name="text_local_name">Nome do local:</string>
    <string name="text_local">Local:</string>
    <string name="text_delete">Excluir?</string>
    <string name="text_visits">Visitas:</string>
    <string name="text_local_hint">UFV</string>
    <string name="text_local_category">Categoria do local:</string>
    <string name="text_global_position">Posicionamento Global</string>
    <string name="text_latitude">Latitude:</string>
    <string name="text_longitude">Longitude:</string>
    <string name="text_check_in">Check-in:</string>
    <string name="text_menu_map">Mapa de check-in</string>
    <string name="text_menu_management">Gestão de check-in</string>
    <string name="text_menu_places">Lugares mais visitados</string>
    <string name="text_menu_back">Voltar</string>
    <string name="text_menu_map_type">Tipos de mapa</string>
    <string name="text_menu_normal_map">Mapa normal</string>
    <string name="text_menu_hybrid_map">Mapa híbrido</string>
    <string name="text_loading">carregando...</string>
</resources>