<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/action_back"
        android:orderInCategory="1"
        android:showAsAction="ifRoom"
        android:title="@string/text_menu_back"
        tools:ignore="AppCompatResource" />

    <item
        android:id="@+id/action_management"
        android:orderInCategory="2"
        android:showAsAction="ifRoom"
        android:title="@string/text_menu_management"
        tools:ignore="AppCompatResource" />

    <item
        android:id="@+id/action_places"
        android:orderInCategory="3"
        android:showAsAction="ifRoom"
        android:title="@string/text_menu_places"
        tools:ignore="AppCompatResource" />

    <item
        android:id="@+id/action_map_type"
        android:orderInCategory="4"
        android:showAsAction="never"
        android:title="@string/text_menu_map_type"
        tools:ignore="AppCompatResource">

        <menu>
            <item
                android:id="@+id/action_normal_map"
                android:orderInCategory="1"
                android:showAsAction="ifRoom"
                android:title="@string/text_menu_normal_map" />
            <item
                android:id="@+id/action_hybrid_map"
                android:orderInCategory="2"
                android:showAsAction="ifRoom"
                android:title="@string/text_menu_hybrid_map" />
        </menu>
    </item>
</menu>