<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/visor"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:inputType="none"
        android:editable="false"
        android:textSize="24sp"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/buttonZero"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonOne"
        android:layout_alignStart="@+id/buttonOne"
        android:layout_marginTop="30dp"
        android:text="@string/zero_text"
        android:onClick="clickNumber"
        android:tag="0"
        android:textSize="24sp" />

    <Button
        android:id="@+id/buttonOne"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonFour"
        android:layout_alignStart="@+id/buttonFour"
        android:layout_marginTop="30dp"
        android:text="@string/one_text"
        android:onClick="clickNumber"
        android:tag="1"
        android:textSize="24sp" />

    <Button
        android:id="@+id/buttonTwo"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/buttonOne"
        android:layout_toEndOf="@+id/buttonOne"
        android:text="@string/two_text"
        android:onClick="clickNumber"
        android:tag="2"
        android:textSize="24sp" />

    <Button
        android:id="@+id/buttonThree"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/buttonTwo"
        android:layout_toEndOf="@+id/buttonTwo"
        android:text="@string/three_text"
        android:onClick="clickNumber"
        android:tag="3"
        android:textSize="24sp" />

    <Button
        android:id="@+id/buttonFour"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonSeven"
        android:layout_alignStart="@+id/buttonSeven"
        android:layout_marginTop="30dp"
        android:text="@string/four_text"
        android:onClick="clickNumber"
        android:tag="4"
        android:textSize="24sp" />

    <Button
        android:id="@+id/buttonFive"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/buttonFour"
        android:layout_toEndOf="@+id/buttonFour"
        android:text="@string/five_text"
        android:onClick="clickNumber"
        android:tag="5"
        android:textSize="24sp" />

    <Button
        android:id="@+id/buttonSix"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/buttonFive"
        android:layout_toEndOf="@+id/buttonFive"
        android:text="@string/six_text"
        android:onClick="clickNumber"
        android:tag="6"
        android:textSize="24sp" />

    <Button
        android:id="@+id/buttonSeven"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/visor"
        android:layout_alignStart="@+id/visor"
        android:layout_marginTop="30dp"
        android:text="@string/seven_text"
        android:onClick="clickNumber"
        android:tag="7"
        android:textSize="24sp" />

    <Button
        android:id="@+id/buttonEight"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/buttonSeven"
        android:layout_toEndOf="@+id/buttonSeven"
        android:text="@string/eight_text"
        android:onClick="clickNumber"
        android:tag="8"
        android:textSize="24sp" />

    <Button
        android:id="@+id/buttonNine"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/buttonEight"
        android:layout_toEndOf="@+id/buttonEight"
        android:text="@string/nine_text"
        android:onClick="clickNumber"
        android:tag="9"
        android:textSize="24sp" />

    <Button
        android:id="@+id/buttonDot"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/buttonZero"
        android:layout_toEndOf="@+id/buttonZero"
        android:text="@string/dot_text"
        android:onClick="clickDot"
        android:textSize="24sp" />

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/buttonDot"
        android:layout_toEndOf="@+id/buttonDot"
        android:text="@string/add_text"
        android:onClick="clickOperation"
        android:tag="+"
        android:textSize="24sp" />

    <Button
        android:id="@+id/buttonMin"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/buttonThree"
        android:layout_toEndOf="@+id/buttonThree"
        android:text="@string/min_text"
        android:onClick="clickOperation"
        android:tag="-"
        android:textSize="24sp" />

    <Button
        android:id="@+id/buttonMul"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/buttonSix"
        android:layout_toEndOf="@+id/buttonSix"
        android:text="@string/mul_text"
        android:onClick="clickOperation"
        android:tag="*"
        android:textSize="24sp" />

    <Button
        android:id="@+id/buttonDiv"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/buttonNine"
        android:layout_toEndOf="@+id/buttonNine"
        android:text="@string/div_text"
        android:onClick="clickOperation"
        android:tag="/"
        android:textSize="24sp" />

    <Button
        android:id="@+id/buttonBackSpace"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/buttonDiv"
        android:layout_toEndOf="@+id/buttonDiv"
        android:text="@string/back_space_text"
        android:onClick="clickErase"
        android:tag="«"
        android:textSize="24sp" />

    <Button
        android:id="@+id/buttonErase"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/buttonMul"
        android:layout_toEndOf="@+id/buttonMul"
        android:text="@string/erase_text"
        android:onClick="clickErase"
        android:tag="C"
        android:textSize="24sp" />

    <Button
        android:id="@+id/buttonEqual"
        android:layout_width="70dp"
        android:layout_height="135dp"
        android:layout_alignTop="@+id/buttonMin"
        android:layout_toEndOf="@+id/buttonMin"
        android:text="@string/equal_text"
        android:onClick="clickEqual"
        android:textSize="24sp" />

</RelativeLayout>