<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/action_map"
        android:orderInCategory="1"
        android:showAsAction="ifRoom"
        android:title="@string/text_menu_map"
        tools:ignore="AppCompatResource" />

    <item
        android:id="@+id/action_management"
        android:orderInCategory="2"
        android:showAsAction="ifRoom"
        android:title="@string/text_menu_management"
        tools:ignore="AppCompatResource" />

    <item
        android:id="@+id/action_places"
        android:orderInCategory="3"
        android:showAsAction="ifRoom"
        android:title="@string/text_menu_places"
        tools:ignore="AppCompatResource" />
</menu>