<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/localName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="150dp"
        android:text="@string/text_local_name"
        android:textColor="#333333"
        android:textSize="20sp"
        android:textStyle="bold" />

    <AutoCompleteTextView
        android:id="@+id/localNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/localName"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/text_local_hint"
        android:inputType="text"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/localCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/localNameEditText"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/text_local_category"
        android:textColor="#333333"
        android:textSize="20sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/localCategorySpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/localCategory"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/globalPosition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/localCategorySpinner"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/text_global_position"
        android:textColor="#333333"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/latitudeLinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/globalPosition"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/latitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_latitude"
            android:textColor="#333333"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/latitudeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/text_loading"
            android:textColor="#333333"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/longitudeLinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/latitudeLinear"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/longitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_longitude"
            android:textColor="#333333"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/longitudeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/text_loading"
            android:textColor="#333333"
            android:textSize="20sp" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonZero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/longitudeLinear"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="20dp"
        android:onClick="checkIn"
        android:text="@string/text_check_in"
        android:textSize="20sp" />

</RelativeLayout>