<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/lantern"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_lantern" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/lantern_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/vibration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="30dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_vibration" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/vibration_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false" />
    </LinearLayout>

    <Button
        android:id="@+id/buttonSensorReadings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:onClick="clickSensorReadings"
        android:text="@string/text_classificate_reads"
        android:textSize="24sp" />

</RelativeLayout>
